# advent-of-code

./: .gitignore  CMakeLists.txt  README.md  advent.c  advent.h  generate.py
2015/day-04/: part02.py  solve.py
2022/: CMakeLists.txt
2022/day-01/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-02/: CMakeLists.txt  combine.c  part01.c  part02.c  solve.c
2022/day-03/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-04/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-05/: CMakeLists.txt  main.py  part01.c  part02.c  solve.c
2022/day-06/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-07/: parse.py  part01.c
2022/day-08/: CMakeLists.txt  main.py  part01.c  part02.c  solve.c
2022/day-09/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-10/: CMakeLists.txt  part01.c  part02.c  solve.c
2022/day-12/: CMakeLists.txt  part01.c  solve.c
2023/: CMakeLists.txt
2023/day-01/: CMakeLists.txt  solve.c
2023/day-02/: CMakeLists.txt  optimal.c  solve.c  solve.py
2023/day-03/: CMakeLists.txt  solve.c
2023/day-04/: CMakeLists.txt  solve.c  solve.py
2023/day-05/: CMakeLists.txt  solve.c
2023/day-06/: CMakeLists.txt  solve.c  solve.py
ASM/: CMakeLists.txt  README.md
ASM/2024/: day01.asm  day10.asm
ASM/include/: common.inc  macros.inc
C/: .clang-format  CMakeLists.txt  README.md  advent.c  advent.h  common.c  common.h
C/.cache/clangd/index/: advent.c.33E4F5CB0BCACD0D.idx  advent.h.48538A0F2C9992BB.idx  day01.c.03E79BD5B5D00141.idx  day01.c.0ECE97A872392973.idx  day01.c.121FA9F449A48909.idx  day01.c.19769B8E5E3C2F60.idx  day01.c.1BDD10226D91304F.idx  day01.c.2EADBE7B4307B532.idx  day01.c.34C09A2BFE66CE1F.idx  day01.c.41B60D8703ABBBB9.idx  day01.c.B59F54E67D0D8DC1.idx  day02.c.423FE8C650F74D54.idx  day02.c.4C3127409A608373.idx  day03.c.25B9039237766058.idx  day03.c.AADC573D33EFF045.idx  day04.c.23F1FA4F71F36BA4.idx  day04.c.831FEAF60037B180.idx  day05.c.41FD3458562BB184.idx  day05.c.6A4EF661B6699491.idx  day06.c.B905DB81B8FA31A5.idx  day06.c.F82594A759858269.idx  day07.c.B3B1BBD9D3542DE6.idx  day08.c.5C524CD88AABF119.idx  day08.c.F950F34393E78F49.idx  day09.c.6D004DCC80523A6C.idx  day09.c.A15947516308FE84.idx  day10.c.74DDCFB07661D651.idx  day10.c.8E3E5F4818C629C4.idx  day11.c.D443B54FF495F6BB.idx  day12.c.06518C852C9F301B.idx  day12.c.A4E0B26DFE6133C7.idx  day13.c.74E6D887A31769EB.idx  day14.c.70595B06DC33B4CC.idx  day15.c.B3F3F9B26777B881.idx  day16.c.B20676E03A05C5CB.idx  day17.c.96693648D4C95FF9.idx  day18.c.F8EFE6C487197EB0.idx  day19.c.228453557AEBF49B.idx  day20.c.D407B1549C37CDC6.idx  day21.c.8DEBC85351019073.idx  (+4 more)
C/2015/: CMakeLists.txt  day01.c
C/2016/: CMakeLists.txt  day01.c
C/2017/: CMakeLists.txt
C/2018/: CMakeLists.txt
C/2019/: CMakeLists.txt  day01.c
C/2020/: CMakeLists.txt  day01.c
C/2021/: CMakeLists.txt
C/2022/: CMakeLists.txt  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day08.c  day09.c  day10.c  day12.c
C/2023/: CMakeLists.txt  day01.c  day02.c  day03.c  day04.c  day05.c  day06.c  day07.c  day08.c  day09.c  day10.c  day11.c  day12.c  day13.c  day14.c  day15.c  day16.c  day17.c  day18.c  day19.c  day20.c  day21.c  day22.c  day23.c  day24.c  day25.c
C/2024/: CMakeLists.txt  day02  day02.c  day04.c  day09.c  day10.c
Haskell/2023/: day01.hi  day01.hs  day17.hs
Python/: README.md
Python/2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
Python/2016/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
Python/2017/: day01.py
Python/2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day08.py  day11.py  day13.py  day14.py  day15.py
Python/2023/: day02.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
Python/2024/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
