cmake_minimum_required(VERSION 3.24)
project(Year2022 C)

set(CMAKE_C_STANDARD 99)

# challenges for each day
add_subdirectory(day-01)
add_subdirectory(day-02)
add_subdirectory(day-03)
add_subdirectory(day-04)
add_subdirectory(day-05)
add_subdirectory(day-06)
add_subdirectory(day-08)
add_subdirectory(day-09)
add_subdirectory(day-10)
add_subdirectory(day-12)
